--- a/src/index.css
+++ b/src/index.css
@@ -289,6 +289,14 @@ textarea:focus-visible,
   outline-offset: 2px;
 }
 
+/* Decrease padding of inputs on mobiles  */
+
+@media screen and (max-width: 425px) {
+  input {
+    padding-block: 0.375rem !important;
+  }
+}
+
 /* Button design (both semantic react and standard btn) */
 
 .std-button {
